--- a/src/style.css
+++ b/src/style.css
@@ -2,7 +2,7 @@
 
 
 @theme{
-  --font-Inter:"Inter", sans-serif;
+  --font-Smooch:"Smooch Sans", sans-serif;
   --color-Dark: #202124;
   --color-innerDark: #191919;
   --color-off_white: #fafafa;
